# geo-ai

./: pyproject.toml
src/geo_ai/: local_file_reader.py
src/geo_ai/geospatial/: exceptions.py  geospatial_file_manager.py  operator.py  vector.py
src/geo_ai/llm/: agent.py
src/geo_ai/scripts/: lab.py
tests/fixtures/geospatial/vector/: boulder.geojson  denver.geojson  test.geojson
tests/unit/: local_file_reader_test.py
tests/unit/geospatial/: conftest.py  geospatial_file_manager_test.py  operator_test.py  vector_test.py
tests/unit/llm/: agent_test.py
tests/unit/scripts/: lab_test.py
