[tool.poetry]
name = "geo-ai"
version = "0.1.0"
description = "Geospatial Processing using an LLM"
authors = ["Jack DiCintio <dicintio.jack@gmail.com>"]
readme = "README.md"
packages = [{include = "geo_ai"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.8"
langchain = "^0.0.233"
rasterio = "^1.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
